# embed-binary-tools

./: .gitignore  README.md  pixi.toml
01-python-script/: pyproject.toml
02-zig-exe/: .gitignore  pyproject.toml
02-zig-exe/src/hello_zig/: __init__.py
02-zig-exe/zig/: build-and-copy.sh  hello-zig
